Fixed alignments

--- a/src/Pages/CV/experience/experience.css
+++ b/src/Pages/CV/experience/experience.css
@@ -15,23 +15,23 @@ h2 {
 .experience-item__title {
     font-weight: bold;
     margin-bottom: 5px;
-    font-size: calc(0.4vw + 0.9vw);
+    font-size: calc(0.3vw + 0.9em);
 }
 
 .experience-item__dates {
-    font-size: calc(0.3vw + 0.9vw);
+    font-size: calc(0.3vw + 0.9em);
     font-weight: bold;
     margin-bottom: 5px;
 }
 
 .experience-item__description {
-    font-size: calc(0.3vw + 0.9vw);
+    font-size: calc(0.3vw + 0.9em);
     margin-bottom: 30px;
+    text-align: justify;
 }
 
 .experience-section {
     background-color: rgb(236, 225, 218);
-    padding: 30px;
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -47,7 +47,7 @@ h2 {
 }
 
 .experience-list {
-    font-size: calc(0.3vw + 0.9vw);
+    font-size: calc(0.3vw + 0.9em);
     line-height: 1.5;
     text-align: left;
     margin: 0 auto;
