--- a/src/Pages/CV/personalskills/personalskills.css
+++ b/src/Pages/CV/personalskills/personalskills.css
@@ -10,7 +10,7 @@
 }
 
 .skills-list {
-    font-size: calc(0.3vw + 0.9vw);
+    font-size: calc(0.3vw + 0.9em);
     line-height: 1.5;
     text-align: left;
 }
@@ -22,12 +22,12 @@
 
 @media only screen and (min-width: 768px) {
     .skills-list {
-        font-size: calc(0.3vw + 0.9vw);
+        font-size: calc(0.3vw + 0.9em);
     }
 }
 
 @media only screen and (min-width: 1024px) {
     .skills-list {
-        font-size: calc(0.3vw + 0.9vw);
+        font-size: calc(0.3vw + 0.9em);
     }
 }
