--- a/src/Pages/CV/softwareskills/softwareskills.css
+++ b/src/Pages/CV/softwareskills/softwareskills.css
@@ -62,12 +62,12 @@
 
 .tooltip-text h3 {
     margin-top: 0;
-    font-size: 16px;
+    font-size: calc(0.3vw + 0.9em);
     font-weight: normal;
 }
 
 .tooltip-text p {
     margin-bottom: 0;
-    font-size: 14px;
+    font-size: calc(0.3vw + 0.9em);
     color: #666;
 }
